fix: wrong font family for buttons and missing color variables

--- a/src/config/global.css
+++ b/src/config/global.css
@@ -3,7 +3,8 @@
 
 :root {
   body,
-  input {
+  input,
+  button {
     font-family: "Open Sans", Helvetica, sans-serif;
   }
 
